--- a/TFANet Mobile/en.lproj/MainStoryboard.storyboard
+++ b/TFANet Mobile/en.lproj/MainStoryboard.storyboard
@@ -137,7 +137,7 @@
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="320" id="1jI-VC-bPH"/>
-                                    <constraint firstAttribute="height" constant="460" id="sZa-qR-0DX"/>
+                                    <constraint firstAttribute="height" constant="211" id="q0h-D1-xji"/>
                                 </constraints>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="menuItem" textLabel="sdh-N6-xBO" style="IBUITableViewCellStyleDefault" id="Gee-uX-7Kv">
@@ -288,50 +288,6 @@
     <resources>
         <image name="banner_tfanet.png" width="600" height="80"/>
     </resources>
-    <classes>
-        <class className="GroupCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/GroupCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="groupID" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="groupSummary" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="groupTitle" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="icon" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="membercount" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="updated" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="GroupDetailViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/GroupDetailViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="groupLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="GroupTestViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/GroupTestViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="groupTableView" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-        <class className="LogInViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/LogInViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="menu" candidateClass="UITableView"/>
-                <relationship kind="outlet" name="status" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="TFANetAppViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/TFANetAppViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="doLogin:"/>
-                <relationship kind="outlet" name="_password" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="_serverResponse" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="_username" candidateClass="UITextField"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
