--- a/TFANet Mobile/en.lproj/MainStoryboard.storyboard
+++ b/TFANet Mobile/en.lproj/MainStoryboard.storyboard
@@ -48,7 +48,7 @@
                                     <constraint firstAttribute="height" constant="30" id="FaQ-JB-aCJ"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES" secureTextEntry="YES"/>
                             </textField>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="69s-Wz-2QI">
                                 <string key="text">User ID (E-Mail)	</string>
